# PyPseudo-Mutation-Analysis-on-python-to-detect-PseudoTestedness-Danniyb

./: .gitignore  CITATION.cff  README.md  pyproject.toml  referance.bib
PyPseudo/: .coverage  draft.md  instrumentation.py  main.py  mutants.json  mutation_plugin.py  mutation_report.json  pyproject.toml  pytest.ini  report.json  report_mutated.json  report_sdl.json  report_unmutated.json  report_xmt.json  sdl_mutation_report.json  setup.py  test_report.json  xmt_mutation_report.json
PyPseudo/cli/: main.py
PyPseudo/config/: mutants.json
PyPseudo/core/: instrumentation.py  mutation_plugin.py  utils.py
PyPseudo/pypseudo/: __init__.py  requirements.txt
PyPseudo/pypseudo/cli/: main.py
PyPseudo/pypseudo/core/: instrumentation.py  mutation_plugin.py  utils.py
PyPseudo/pypseudo/results/: conftest.py  coverage_mutated.json  report_unmutated.json  test_report.json
PyPseudo/results/: coverage_unmutated.json  mutation_report.json  report_mutated.json
PyPseudo/simplePro/: calculator.py  newtest.py  test_calculator.py
PyPseudoTest/: .coverage  compare_report.py  instrumentation.py  main.py  mutants.json  report_unmutated.json
PyPseudoTest/results/: final_report.json
PyPseudoTest/simplePro/: calculator.py  mutated_calculator.py  test_calculator.py
pypseudo_instrumentation/: README.md  pyproject.toml  setup.py
pypseudo_instrumentation/pypseudo_instrumentation/: __init__.py  mutation_support.py
