[tool.poetry]
name = "pypseudo"
version = "0.1.0"
description = "A Pseudo-Tested Code Identifier for Python - inspired by PSEUDOSWEEP"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "pypseudo"},
    {include = "pypseudo_instrumentation"}
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.0"
astor = "^0.8.1"
pytest-json-report = "^1.5.0"
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
pypseudo = "pypseudo.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"