[tool.poetry]
name = "pypseudo_instrumentation"
version = "0.1.0"
description = "Support package for PyPseudo mutation testing"
authors = ["Daniel Bekele <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pypseudo_instrumentation"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"